# jumjum

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
scripts/: build.sh  draw_triangulation.py
src/: CMakeLists.txt
src/algorithms/delaunay/: trianglesearch.cpp  trianglesearch.hpp  triangulation.cpp  triangulation.hpp
src/algorithms/planesweep/: events.cpp  events.hpp  planesweep.cpp  planesweep.hpp  statusline.hpp
src/executables/: CMakeLists.txt  playground.cpp
src/executables/correctnesstests/: planesweep.test.cpp  triangulation.test.cpp
src/executables/endtoendtests/: planesweep.test.cpp
src/executables/endtoendtests/testdata/: drawlines.py
src/executables/testdata/: inputTriangulation1.txt
src/executables/unittests/: circle.test.cpp  events.test.cpp  getOrientation.test.cpp  linesegment.test.cpp  point.test.cpp  polygon.test.cpp  triangle.test.cpp  trianglesearch.test.cpp  triangulation.test.cpp
src/primitives/: circle.cpp  circle.hpp  linesegment.cpp  linesegment.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  triangle.cpp  triangle.hpp
src/utility/: geomutils.cpp  geomutils.hpp  io.cpp  io.hpp
